trying to fix z-index of sliders

--- a/single_issuers.css
+++ b/single_issuers.css
@@ -88,7 +88,8 @@
 			margin: 0 auto 
                 35rem auto;
 			color: #3b3b3b;
-			background-color: rgba(0,0,0,0)
+			background-color: rgba(0,0,0,0);
+            z-index: 25;
             
 		}
         
